get methods working

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,11 @@
         {% endblock %}
 
         <hr>
-        Copyright (c) 2021 by Adam.
+        Any Feedback? <br />
+        <form action="/processfeedback" method="post">
+            <input type="text" name="feedback"> <br />
+            <input type="submit" value="Submit">
+        </form>
 
     </body>
 
