--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
 {% block body %}
-        Click <a href="/showform">here</a> to tell us about yourself.
+        <a href="/showform">Personal Details</a> <br />
+        <a href="/showform">CV</a> <br />
+        <a href="/showform">Computing</a> <br />
+        <a href="/showform">Intrerests</a> <br />
 {% endblock %}
