Added content to cv page

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
 {% block body %}
-        <a href="/showform">Personal Details</a> <br />
-        <a href="/showform">CV</a> <br />
-        <a href="/showform">Computing</a> <br />
-        <a href="/showform">Intrerests</a> <br />
+
+        <a href="/showPersonal">Personal Details</a> <br />
+        <a href="/showCV">CV</a> <br />
+        <a href="/showComputing">Computing</a> <br />
+        <a href="/showInterests">Intrerests</a> <br />
+
 {% endblock %}
