--- a/templates/personal.html
+++ b/templates/personal.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block body %}
-        Click <a href="/showform">here</a> to tell us about yourself.
+        Click here to tell us about yourself.
 {% endblock %}
