Fixed the feedback form

--- a/templates/cv.html
+++ b/templates/cv.html
@@ -1,5 +1,63 @@
 {% extends "base.html" %}
 
 {% block body %}
-        Click <a href="/showform">here</a> to tell us about yourself.
+CV for Adam Kealy:<br />
+
+Personal Information: Name: Adam Kealy <br />
+                                       D.O.B: 11/06/1998<br />
+I am a self-motivated individual and strive to complete all tasks to the best of my knowledge and ability, my aim is to be able to show and develop my skills in a work environment.<br />
+
+Contact Information: <br />
+Phone Number: 0851623462<br />
+Email: adamjkealy@gmail.com<br />
+Address: 48 An Choill Rua, Paulstown, Co. Kilkenny.<br />
+
+Education:<br />
+I completed my second year of Computer Games Development in 2018. These modules are as follows:<br />
+Human Computer Interaction
+Pass<br />
+Animation
+Pass<br />
+Software Engineering for Games 1
+Pass<br />
+Gameplay Programming 1
+Pass<br />
+Programming 2
+Pass<br />
+Applied Physics 1
+Pass<br />
+
+
+I completed my Leaving Cert in 2016.<br />
+
+Work Experience: <br />
+Block Layer: <br />
+ For the last seven years I have been working off and on for a Block Layer working summers and weekends. In covid times working full time. It is my job to prepare sites by stacking blocks and mixing mortar. I work with the forman on large sites by sourcing materials and working out the details with the engineer. It was also my job to lock up at the end of the day acting as the forman when they weren't around.<br />
+
+Sam McCauleys Pharmacy: <br />
+In December of 2013 I worked at Sam McCauleys. In my first week I worked in the stock room crushing and bailing empty boxes, opening stock and moving it to the shop floor. In my second week onwards I was floor staff. I was tasked with merchandising, stacking shelves and wrapping gifts.<br />
+
+Khan’s BookShop: <br />
+I worked in Khan’s BookShop in the summer of 2014. I had to move stock, sort books, merchandising, help customers and make sales. <br />
+
+Skills:<br />
+4 years of C++.<br />
+4 years of using Visual Studio.<br />
+1 year of Blender.<br />
+2 years of JavaScript.<br />
+2 years of Python.<br />
+2 years of Unity.<br />
+
+
+Hobbies:<br />
+
+Listening to music and collecting vinyls.<br />
+Solving Sudoku variants and other logic puzzles.<br />
+
+References: <br />
+William Kealy,
+Kealy Construction,
+086 3899107.
+
+
 {% endblock %}
