--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,12 @@
-{% extends "base.html" %}
-
-{% block body %}
-
+<!DOCTYPE html>
+<html>
+        
+        <body>
         <a href="/showPersonal">Personal Details</a> <br />
         <a href="/showCV">CV</a> <br />
         <a href="/showComputing">Computing</a> <br />
         <a href="/showInterests">Intrerests</a> <br />
 
-{% endblock %}
+        </body>
+
+</html>   
