--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>{{ title }}</title>
+        <a href="/showhome">Home</a> <br />
+        <hr>
     </head>
 
     <body>
