--- a/templates/personal.html
+++ b/templates/personal.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
 {% block body %}
-        Click here to tell us about yourself.
+        Name: Adam <br />
+        Last Name: Kealy<br />
+        D.O.B.: 11/06/1998<br />
+        Student no.: C00213914<br />
 {% endblock %}
