Added headers to each page

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
         Any Feedback? <br />
         
         <form action="/processfeedback" method="post">
-            <input type="text" name="feedback"> <br />
+            Email: <input type="text" name="email"> <br />
+            Feedback: <input type="text" name="feedback"> <br />
             <input type="submit" value="Submit">
         </form>
 
