Added return method to computing subpages

--- a/templates/computing.html
+++ b/templates/computing.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-
-
+    <a href="/showAr">Augmented Reality</a> <br />
+    <a href="/showCloudComputing">Cloud Computing</a> <br />
+    <a href="/showEmbeddedSoftware">Embedded Software</a> <br />
 {% endblock %}
