--- a/templates/cloud_computing.html
+++ b/templates/cloud_computing.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
 {% block body %}
+<a href="/showComputing">Back</a> <br />
+<br />
+<br />
         cloud computing
 {% endblock %}
