--- a/templates/embedded_software.html
+++ b/templates/embedded_software.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
 {% block body %}
+<a href="/showComputing">Back</a> <br />
+<br />
+<br />
         embedded software
 {% endblock %}
