Cloud computing page started

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>{{ title }}</title>
+        {% if isHome == False %}
         <a href="/showhome">Home</a> <br />
+        {% endif %}
     </head>
 
     <body>
