--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html>
-        
-        <body>
+{% extends "base.html" %}
+
+{% block body %}
         <a href="/showPersonal">Personal Details</a> <br />
         <a href="/showCV">CV</a> <br />
         <a href="/showComputing">Computing</a> <br />
         <a href="/showInterests">Intrerests</a> <br />
-
-        </body>
-
-</html>   
+{% endblock %}
