Cloud computing page fully working with external tab opening in a new tab

--- a/templates/cloud_computing.html
+++ b/templates/cloud_computing.html
@@ -4,5 +4,15 @@
 <a href="/showComputing">Back</a> <br />
 <br />
 <br />
-        cloud computing
+<p>
+Cloud computing is the on-demand availability of computer system resources, especially data storage (cloud storage) <br />
+and computing power, without direct active management by the user. <br />
+Large clouds often have functions distributed over multiple locations, each location being a data center. <br />
+Cloud computing relies on sharing of resources to achieve coherence and economies of scale, typically using a <br />
+"pay-as-you-go" model which can help in reducing capital expenses but may also lead to unexpected operating expenses <br />
+for unaware users.<br />
+</p>
+<br />
+<br />
+For more information click <a href="https://en.wikipedia.org/wiki/Cloud_computing">here.</a> <br />
 {% endblock %}
