Embedded software page fully implemented

--- a/templates/cloud_computing.html
+++ b/templates/cloud_computing.html
@@ -14,5 +14,5 @@ for unaware users.<br />
 </p>
 <br />
 <br />
-For more information click <a href="https://en.wikipedia.org/wiki/Cloud_computing">here.</a> <br />
+For more information click <a href="https://en.wikipedia.org/wiki/Cloud_computing" target="_blank">here.</a> <br />
 {% endblock %}
