AR page fully implemented

--- a/templates/ar.html
+++ b/templates/ar.html
@@ -5,4 +5,7 @@
 <br />
 <br />
         ar
+<br />
+<br />
+For more information click <a href="https://en.wikipedia.org/wiki/Augmented_reality" target="_blank">here.</a> <br />
 {% endblock %}
