--- a/templates/embedded_software.html
+++ b/templates/embedded_software.html
@@ -4,5 +4,19 @@
 <a href="/showComputing">Back</a> <br />
 <br />
 <br />
-        embedded software
+<p>
+Embedded software is computer software, written to control machines or devices that are not typically thought<br />
+of as computers, commonly known as embedded systems. It is typically specialized for the particular hardware that<br />
+it runs on and has time and memory constraints. This term is sometimes used interchangeably with firmware. A precise<br />
+and stable characteristic feature is that no or not all functions of embedded software are initiated/controlled<br />
+via a human interface, but through machine-interfaces instead. Manufacturers build embedded software into the electronics of cars,<br />
+telephones, modems, robots, appliances, toys, security systems, pacemakers, televisions and set-top boxes, and digital watches,<br />
+for example. This software can be very simple, such as lighting controls running on an 8-bit microcontroller with a few kilobytes<br />
+of memory with the suitable level of processing complexity determined with a Probably Approximately Correct Computation framework <br />
+(a methodology based on randomized algorithms). However, embedded software can become very sophisticated in applications<br />
+ such as routers, optical network elements，airplanes, missiles, and process control systems.<br />
+</p>
+<br />
+<br />
+For more information click <a href="https://en.wikipedia.org/wiki/Embedded_software" target="_blank">here.</a> <br />
 {% endblock %}
