Interests page fully implemented

--- a/templates/ar.html
+++ b/templates/ar.html
@@ -4,7 +4,18 @@
 <a href="/showComputing">Back</a> <br />
 <br />
 <br />
-        ar
+<p>
+Augmented reality (AR) is an interactive experience of a real-world environment where the objects<br />
+that reside in the real world are enhanced by computer-generated perceptual information, sometimes<br />
+across multiple sensory modalities, including visual, auditory, haptic, somatosensory and olfactory.<br />
+AR can be defined as a system that incorporates three basic features: a combination of real and virtual<br />
+worlds, real-time interaction, and accurate 3D registration of virtual and real objects. The overlaid<br />
+sensory information can be constructive, or destructive. This experience is seamlessly interwoven with<br />
+the physical world such that it is perceived as an immersive aspect of the real environment. In this way,<br />
+augmented reality alters one's ongoing perception of a real-world environment, whereas virtual reality<br />
+completely replaces the user's real-world environment with a simulated one. Augmented reality is related<br />
+to two largely synonymous terms: mixed reality and computer-mediated reality.<br />
+</p>
 <br />
 <br />
 For more information click <a href="https://en.wikipedia.org/wiki/Augmented_reality" target="_blank">here.</a> <br />
