Code has been Blackified

--- a/templates/interests.html
+++ b/templates/interests.html
@@ -1,5 +1,18 @@
 {% extends "base.html" %}
 
 {% block body %}
-        Click <a href="/showform">here</a> to tell us about yourself.
+I have a keen intrest in varient sudoku as it keeps my mind sharp.<br />
+<br  />
+Here is my favorite sudoku youtube page <a href="https://www.youtube.com/c/CrackingTheCryptic" target="_blank">https://www.youtube.com/c/CrackingTheCryptic</a><br />
+<br />
+I play Magic: the Gathering regularly for recreation. It is a game with a rich history, diverse<br  />
+comunity and complex game system. I play a format called commander.<br  />
+<br  />
+Here is the biggest database about the format to get you started <a href="https://edhrec.com/" target="_blank">https://edhrec.com/</a><br />
+<br  />
+I routinely listen a comicbook/ movie podcast. The two hosts Nick Mason and Mr. Sunday Movies<br  />
+chat and laugh about comicbook movies and tv shows decalring wether they are the best or <br  />
+worst movies ever. No inbetween. Keep in mind it uses strong language.<br  />
+<br  />
+Check it out here: <a href="https://www.planetbroadcasting.com/our-shows/the-weekly-planet/" target="_blank">https://www.planetbroadcasting.com/our-shows/the-weekly-planet/</a><br />
 {% endblock %}
