Added images to Interests page

--- a/templates/cv.html
+++ b/templates/cv.html
@@ -59,6 +59,9 @@ References: <br />
 William Kealy,
 Kealy Construction,
 086 3899107.
+<hr>
+LinkedIn link: <a href="https://www.linkedin.com/in/adamkealy/" target="_blank">https://www.linkedin.com/in/adamkealy/</a><br />
+Link to CV in Google Drive: <a href="https://docs.google.com/document/d/1oxpRsmIqT9lyEQvYMKFJLwSNLDYrFW1EcpdG1WS02sk/edit?usp=sharing" target="_blank">https://docs.google.com/document/d/1oxpRsmIqT9lyEQvYMKFJLwSNLDYrFW1EcpdG1WS02sk/edit?usp=sharing</a><br />
 </p>
 
 {% endblock %}
